[project]
name = "tumblr-backup"
version = "1.0.0.post1"
description = "An advanced tool for backing up Tumblr blogs."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "filetype~=1.2",
    "platformdirs~=4.2",
    "requests~=2.31",
    "urllib3~=1.26",
]

[project.optional-dependencies]
exif = ["py3exiv2~=0.12"]
jq = ["jq~=1.6"]
notes = ["beautifulsoup4~=4.12", "lxml~=5.1"]
video = ["yt_dlp>=2023.12.30"]
all = ["tumblr-backup[exif,jq,notes,video]"]

[project.urls]
"Homepage" = "https://github.com/cebtenzzre/tumblr-utils"
"Bug Reports" = "https://github.com/cebtenzzre/tumblr-utils/issues"
"Source" = "https://github.com/cebtenzzre/tumblr-utils"

[project.scripts]
tumblr-backup = "tumblr_backup.main:main"
tb-login = "tumblr_backup.login:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
